# ready-form-ai

./: README.md  index.html  inspect_pdf.ts  package-lock.json  package.json  vite.config.ts
ai-backend/: pyproject.toml
ai-backend/src/: main.py  screenshot.py
src/: App.css  App.tsx  index.css
src/components/: ConversationLog.tsx  PDFUploader.tsx  PDFViewer.tsx  VoiceAgent.tsx
