[project]
name = "voiceai"
version = "0.1.0"
description = "Voice to voice AI assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ultravox-client>=0.0.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch" }
transformers = { git = "https://github.com/huggingface/transformers" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
